make smyrna_static when --enable-static

--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -13,6 +13,16 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/cmd/smyrna/gui \
 	$(GTK_CFLAGS) $(GLUT_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS) $(FONTCONFIG_CFLAGS) $(GTS_CFLAGS)
 
+bin_PROGRAMS =
+if WITH_SMYRNA
+if ENABLE_SHARED
+bin_PROGRAMS += smyrna 
+endif
+if ENABLE_STATIC
+bin_PROGRAMS += smyrna_static
+endif
+endif
+
 noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
 	hier.h materials.h selection.h smyrnadefs.h support.h topview.h \
 	topviewdata.h topviewdefs.h trackball.h tvnodes.h viewport.h \
@@ -20,9 +30,6 @@ noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
 	gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
 	gui/glmenu.h gui/gui.h gui/menucallbacks.h gui/toolboxcallbacks.h md5.h \
 	gui/topviewsettings.h gui/beacon.h
-if WITH_SMYRNA
-bin_PROGRAMS = smyrna
-endif
 
 smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	hier.c main.c selection.c support.c template.c topview.c topviewdata.c \
@@ -40,5 +47,15 @@ smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/neatogen/libneatogen_C.la \
 		$(GTK_LIBS) $(GLUT_LIBS) $(GTKGLEXT_LIBS) $(GLADE_LIBS) $(EXPAT_LIBS) $(GTS_LIBS) \
 		$(EXTRA_SMYRNA_LDFLAGS)
+
+smyrna_static_SOURCES = $(smyrna_SOURCES)
+smyrna_static_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
+		$(top_builddir)/lib/cdt/libcdt_C.la \
+		$(top_builddir)/lib/xdot/libxdot_C.la \
+		$(top_builddir)/lib/glcomp/libglcomp_C.la \
+		$(top_builddir)/lib/topfish/libtopfish_C.la \
+		$(top_builddir)/lib/common/libcommon_C.la \
+		$(top_builddir)/lib/neatogen/libneatogen_C.la \
+		$(GTK_LIBS) $(GLUT_LIBS) $(GTKGLEXT_LIBS) $(GLADE_LIBS) $(EXPAT_LIBS) $(GTS_LIBS)
 
 EXTRA_DIST = smyrna.vcproj
