--- a/configure.ac
+++ b/configure.ac
@@ -2967,6 +2967,7 @@ AC_CONFIG_FILES(Makefile
 	lib/fdpgen/Makefile
 	lib/sparse/Makefile
 	lib/sfdpgen/Makefile
+	lib/osage/Makefile
 	lib/circogen/Makefile
 	lib/twopigen/Makefile
 	lib/patchwork/Makefile
