--- a/lib/Makefile.old
+++ b/lib/Makefile.old
@@ -1,6 +1,6 @@
 SUBDIRS = cdt graph agraph cgraph gd pathplan agutil sfio vmalloc ast circogen \
     dotgen fdpgen sfdpgen neatogen pack twopigen common gvc ingraphs expr \
-    patchwork sparse rbtree ortho
+    patchwork sparse rbtree ortho osage
 
 all install clean :
 	(for i in ${SUBDIRS}; do (cd $$i; make $@); done)
