remove proprietary sources from public branch

--- a/lib/sfdpgen/Makefile.am
+++ b/lib/sfdpgen/Makefile.am
@@ -21,8 +21,7 @@ AM_CPPFLAGS = \
 
 noinst_HEADERS = sfdpinternal.h spring_electrical.h \
 	LinkedList.h sparse_solve.h post_process.h \
-	QuadTree.h Multilevel.h sfdp.h PriorityQueue.h \
-	triangle.h
+	QuadTree.h Multilevel.h sfdp.h PriorityQueue.h 
 
 if WITH_SFDP
 noinst_LTLIBRARIES = libsfdpgen_C.la
@@ -32,4 +31,4 @@ libsfdpgen_C_la_SOURCES = sfdpinit.c spring_electrical.c \
 	LinkedList.c sparse_solve.c post_process.c \
 	QuadTree.c Multilevel.c PriorityQueue.c
 
-EXTRA_DIST = Makefile.old triangle.c triangle.h
+EXTRA_DIST = Makefile.old 
