enable sfdp in ubuntu/debian builds

--- a/debian/rules
+++ b/debian/rules
@@ -64,7 +64,7 @@ configure-stamp:
 	--with-devil \
 	--with-gts \
 	--without-ortho \
-	--without-sfdp \
+	--with-sfdp \
 	--without-smyrna \
 	--disable-sharp \
 	--enable-guile \
