--- a/debian/changelog.in
+++ b/debian/changelog.in
@@ -1,5 +1,9 @@
 graphviz (@VERSION@-1) intrepid; urgency=low
 
+  * Enabled "--with-sfdp"  new layout engine
+
+ -- John Ellson <ellson@research.att.com>  Tue, 2 Jun 2009 22:38:00 -0400
+
   * Adapted for upstream nightly builds by applying graphviz_2.18-1ubuntu2.diff.gz
     to CVS sources and adding the debian/ subtree to CVS.
 
