change to --without-devil because devil's library installation is broken on ubuntu9

--- a/debian/rules
+++ b/debian/rules
@@ -61,7 +61,7 @@ configure-stamp:
 	--with-ipsepcola \
 	--with-lasi \
 	--with-rsvg \
-	--with-devil \
+	--without-devil \
 	--with-gts \
 	--without-ortho \
 	--with-sfdp \
