revert last change - perhaps it just a missing liblcms-dev package

--- a/debian/rules
+++ b/debian/rules
@@ -61,7 +61,7 @@ configure-stamp:
 	--with-ipsepcola \
 	--with-lasi \
 	--with-rsvg \
-	--without-devil \
+	--with-devil \
 	--with-gts \
 	--without-ortho \
 	--with-sfdp \
