--- a/debian/rules
+++ b/debian/rules
@@ -75,8 +75,8 @@ configure-stamp:
 	--enable-php \
 	--enable-python \
 	--disable-python23 \
-	--enable-python24 \
-	--enable-python25 \
+	--disable-python24 \
+	--disable-python25 \
 	--disable-r \
 	--enable-ruby \
 	--enable-tcl \
