--- a/debian/rules
+++ b/debian/rules
@@ -76,7 +76,8 @@ configure-stamp:
 	--enable-python \
 	--disable-python23 \
 	--disable-python24 \
-	--disable-python25 \
+	--enable-python25 \
+	--enable-python26 \
 	--disable-r \
 	--enable-ruby \
 	--enable-tcl \
