smyrna changes to improve font size calculation and to fix edge color bug

--- a/plugin/gdiplus/gvplugin_gdiplus.vcproj
+++ b/plugin/gdiplus/gvplugin_gdiplus.vcproj
@@ -228,6 +228,10 @@
 				RelativePath=".\gvrender_gdiplus.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\gvtextlayout_gdiplus.cpp"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
