--- a/lib/rbtree/Makefile.am
+++ b/lib/rbtree/Makefile.am
@@ -11,7 +11,7 @@ librbtree_C_la_SOURCES = misc.c red_black_tree.c stack.c
 CLEANFILES = inkpot_lib_*.dat
 
 EXTRA_DIST = LICENSE CHANGES makefile.txt test_red_black_tree.c \
-	     simple_test.sh test_rb
+	     simple_test.sh test_rb rbtree.vcproj
 
 DISTCLEANFILES = 
 
