Enable sfdp on el5, assumin gts-devel is available, e.g. from us.

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -86,10 +86,12 @@ BuildRequires: perl ruby ruby-devel guile-devel python python-devel
 %if %rhel >= 5
 %define JAVA 1
 %define PANGOCAIRO 1
-%define RSVG 1
 BuildRequires: libtool-ltdl libtool-ltdl-devel libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel
 BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel gtk2-devel
+%define RSVG 1
 BuildRequires: librsvg2-devel
+%define SFDP 1
+BuildRequires: gts-devel
 %endif
 %if %rhel >= 6
 %define PHP 1
