--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -131,6 +131,9 @@ BuildRequires: perl ruby ruby-devel guile-devel python python-devel
 %define JAVA 1
 %define PANGOCAIRO 1
 %define RSVG 1
+%define SMYRNA 1
+BuildRequires: gtkglarea2-devel gtkglext-devel libglade2-devel
+BuildRequires: freeglut-devel gts-devel
 BuildRequires: libtool-ltdl libtool-ltdl-devel libXaw-devel libSM-devel libICE-devel libXpm-devel libXt-devel libXmu-devel libXext-devel libX11-devel java-devel
 BuildRequires: cairo-devel >= 1.1.10 pango-devel gmp-devel gtk2-devel
 BuildRequires: librsvg2-devel
@@ -138,9 +141,6 @@ BuildRequires: librsvg2-devel
 %if %att_rhel >= 6
 %define PHP 1
 %define GDK_PIXBUF 1
-#%define SMYRNA 1
-#BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
-#BuildRequires: freeglut-devel gts-devel
 BuildRequires: gd gd-devel perl-devel php-devel
 %endif
 %endif
@@ -269,7 +269,7 @@ BuildRequires: librsvg2-devel
 %define SFDP 1
 %define LASI 1
 BuildRequires: gd gd-devel perl-devel DevIL-devel lasi-devel
-BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel 
+BuildRequires: gtkglarea2-devel gtkglext-devel libglade2-devel 
 BuildRequires: freeglut-devel gts-devel
 %endif
 %if %att_fedora >= 8
