eliminate old CODEGEN crud, eliminate: gvrender_begin_context(), ..end_context(), ..set_font() 	which were only used by codegens simplify htmlfont_t struct (single int for boolean flags) start migrating to wider use of htmlfont_t for describint font

--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -27,17 +27,12 @@ noinst_HEADERS = render.h utils.h memory.h \
 	logic.h const.h macros.h htmllex.h htmltable.h pointset.h
 noinst_LTLIBRARIES = libcommon_C.la
 
-if WITH_CODEGENS
-CODEGENS = $(GD_CODEGENS) diagen.c hpglgen.c mifgen.c mpgen.c picgen.c vtxgen.c
-endif
-
-
 libcommon_C_la_SOURCES = arrows.c colxlate.c fontmetrics.c \
 	args.c memory.c globals.c htmllex.c htmlparse.y htmltable.c input.c \
 	pointset.c postproc.c routespl.c splines.c psusershape.c \
 	timing.c labels.c ns.c shapes.c utils.c geom.c \
 	output.c emit.c ps_font_equiv.txt ps_fontmap.txt fontmap.cfg \
-	color_names $(CODEGENS)
+	color_names
 
 fontmetrics.o fontmetrics.lo: ps_font_equiv.h
 
