clean out more CODEGEN bits - mostly comments

--- a/graphs/directed/Makefile.am
+++ b/graphs/directed/Makefile.am
@@ -19,9 +19,6 @@ EXTRA_DIST = $(GRAPHS)
 
 CLEANFILES = core *.gv.* *.png .xvpics/* 
 
-# CODEGEN_FORMATS = -Tdia -Thpgl -Tmif -Tmp -Tpic -Tpcl -Tvtx
-CODEGEN_FORMATS = 
-
 test:
 	$(top_builddir)/cmd/dot/dot \
 		-Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
@@ -30,7 +27,7 @@ test:
 		-Tpng:cairo -Tpng:gd -Tpng:cairo:gd -Tpng:cairo:cairo -Tpng:gd:gd \
 		-Tps -Tps2 -Tps:lasi -Tps:cairo -Tpdf \
 		-Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
-		$(CODEGEN_FORMATS) -O $(GRAPHS) 
+		-O $(GRAPHS) 
 ins_test:
 	dot \
                 -Tcanon -Tgv -Tplain -Tplain-ext -Txdot \
@@ -39,7 +36,7 @@ ins_test:
 		-Tpng:cairo -Tpng:gd -Tpng:cairo:gd -Tpng:cairo:cairo -Tpng:gd:gd \
                 -Tps -Tps2 -Tps:lasi -Tps:cairo -Tpdf \
                 -Tsvg -Tsvg:cairo -Tsvgz -Tvrml \
-                $(CODEGEN_FORMATS) -O $(GRAPHS) 
+                -O $(GRAPHS) 
 
 #	for i in $(GRAPHS); do \
 #		echo "dot $$i"; \
