--- a/cmd/tools/.cvsignore
+++ b/cmd/tools/.cvsignore
@@ -20,5 +20,10 @@ nop
 sccmap
 tred
 unflatten
+gml2gv
+gmlparse.[ch]
+gmlscan.c
+y.output
+y.tab.[ch]
 *.pdf
 CMakeFiles CMakeTmp CMakeFiles CMakeCache.txt cmake_install.cmake
