--- a/lib/common/Makefile.old
+++ b/lib/common/Makefile.old
@@ -23,14 +23,11 @@ NOINST_HDRS = render.h utils.h memory.h \
 	geomprocs.h colorprocs.h const.h macros.h pointset.h
 NOINST_GENERATED_HDRS = colortbl.h htmltable.h  htmlparse.h htmllex.h 
 
-GD_CODEGENS = 
-CODEGENS = $(GD_CODEGENS) diagen.o hpglgen.o mifgen.o mpgen.o picgen.o vtxgen.o 
-
 OBJS = arrows.o colxlate.o fontmetrics.o \
 	args.o memory.o globals.o htmllex.o htmlparse.o htmltable.o input.o \
 	pointset.o postproc.o routespl.o splines.o psusershape.o \
 	timing.o labels.o ns.o shapes.o utils.o geom.o \
-	output.o emit.o $(CODEGENS)
+	output.o emit.o
 
 libcommon.a : $(OBJS)
 	$(RM) libcommon.a
